# weblyzard_api

./: .checkstyle  .classpath  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  build-package.sh  dependabot.yml  pom.xml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  testing.env  tox.ini
doc/: Makefile  conf.py  index.rst  modules.rst  usedPosTags.csv  weblyzard_api.client.recognize.rst  weblyzard_api.client.recognize_output.rst  weblyzard_api.client.recognize_service.rst  weblyzard_api.client.rst  weblyzard_api.data_format.annotation_format.rst  weblyzard_api.data_format.dep-tags.rst  weblyzard_api.data_format.pos-tags.rst  weblyzard_api.data_format.rst  weblyzard_api.data_format.xml_format.rst  weblyzard_api.rst  weblyzard_example.xml
doc/services/: POS-Tags.md  XML-Format.md  jeremia.md  pos-tags.md  recognize-output.md  usedPosTags.csv
examples/: set-weblyzard-api-env.sh
examples/keywords/: compute-keywords.py
java-examples/: README.md
java-examples/keyword-extraction/: pom.xml
python-examples/keywords/: compute-keywords.py
src/: setup.py
src/java/test/resources/reference/: weblyzard-example.json
src/python/weblyzard_api/: __init__.py
src/python/weblyzard_api/client/: __init__.py  annotator_client.py  blazegraph.py  classifier.py  domain_specificity.py  emotion_classifier.py  emotion_classifier_client.py  external_api_ng.py  fuseki.py  jairo.py  jeremia.py  jeremia_ng.py  jesaja.py  jesaja_ng.py  joanna.py  joanna_argparse.py  lemmatizer.py  openthesaurus.py  opinion_mining.py  pos.py  rdf.py  sentiment_analysis.py  skb_rest_client.py  text_sense_client.py  videolyzard.py  wl_dictionaries.py  wl_rest_api.py  wlt_api_client.py
src/python/weblyzard_api/client/data/: jeremia_reference_output_documents.py  jeremia_reference_output_single_document.py
src/python/weblyzard_api/client/ontogene/: __init__.py  oger.py
src/python/weblyzard_api/client/openrdf/: __init__.py  queries.py  wl_upload_profile.py  wl_upload_repository.py
src/python/weblyzard_api/client/projects/: media_criticism.py
src/python/weblyzard_api/client/recognize/: __init__.py  ng.py
src/python/weblyzard_api/client/textqualityclient/: client_text_quality.py
src/python/weblyzard_api/client/triplestore/: __init__.py  blazegraph.py  fuseki.py  qlever.py
src/python/weblyzard_api/client/weblyzard/: __init__.py  wl_compute_api.py  wl_document_api.py  wl_search_api.py  wl_skb_client.py  wl_statistical_api.py
src/python/weblyzard_api/model/: __init__.py  content.py  document.py  exceptions.py  partition.py  xml_content.py
src/python/weblyzard_api/model/parsers/: __init__.py  json_10.py  json_2018.py  xml_2005.py  xml_2013.py  xml_deprecated.py
src/python/weblyzard_api/test/: __init__.py
src/python/weblyzard_api/tests/: test_helper.py  test_rdf.py
src/python/weblyzard_api/tests/always_run/: __init__.py
src/python/weblyzard_api/tests/client/: test_annotator.py  test_domain_specificity.py  test_emotion_classifier.py  test_external_api_ng.py  test_jairo.py  test_jeremia.py  test_jeremia_ng.py  test_jesaja.py  test_jesaja_ng.py  (+15 more)
src/python/weblyzard_api/util/: cache.py  file_formats.py  http.py  module_path.py  pickleIterator.py
src/python/weblyzard_api/xml_content/: __init__.py
src/resources/test/: psalms-docs-weblyzardformat.json
src/resources/test/json/: sentence-with-extended-annotations.json  sentence-with-standard-annotations.json  sentence-without-annotations.json
src/resources/test/reference/: weblyzard-example.xml
src/weblyzard_api/: __init__.py  xml_content.py
src/weblyzard_api/client/: __init__.py  classifier.py  domain_specificity.py  entitylyzard.py  jeremia.py  jesaja.py  joanna.py  joanna_argparse.py  openrdf.py  opinion_mining.py  pos.py  recognize.py  sentiment_analysis.py  videolyzard.csv  videolyzard.py  wl_dictionaries.py  wl_rest_api.py
src/weblyzard_api/client/crowdflower/: __init__.py
src/weblyzard_api/client/openrdf/: __init__.py  wl_upload_profile.py  wl_upload_repository.py
src/weblyzard_api/client/projects/: media_criticism.py
src/weblyzard_api/client/recognize/: __init__.py  wl_upload_repository.py
src/weblyzard_api/xml_content/: __init__.py  translate.py  translate_xml.py  xml_content_2005.py  xml_content_latest.py
src/weblyzard_api/xml_content/parsers/: __init__.py  api_json_10.py  json_10.py  xml_2005.py  xml_2013.py
src/weblyzard_api/xml_content/tests/: __init__.py  translate_test.py  xml_content_test.py
test/python/: test_json10.py  test_rest_document_api_client.py  test_xml_content.py  test_xml_parser.py  test_xmp_parser.py
test/python/data/: document_with_illegal_header_attributes.pkl  failing_xml.xml  xml_content_with_illegal_header_attributes.pkl
tests/python/: test_helper.py  test_json10.py  test_xml_parser.py
tests/python/client/: test_annotator.py  test_domain_specificity.py  test_jeremia.py  test_jesaja.py  test_jesaja_neks.py  test_jesaja_ng.py  test_joanna.py  test_mediacriticism.py  test_recognize.py  test_restAPI_client.py  test_skb_rest_client.py  test_videolyzard.py
tests/python/data/: failing_xml.xml
tests/python/xml_content/: test_xml_content.py  test_xml_parser.py
(+298 files in other folders)
