[build-system]
requires = ["poetry-core", "toml", "mock"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
requests-mock = "^1.10.0"
elasticsearch_dsl = "*"
parameterized = "*"
requests = "^2.11.1"


[tool.poetry]
name = "weblyzard-api"
version = "4.1.0-dev"
description = "OS clients to webLyzard services"
authors = ["Albert Weichselbraun <weichselbraun@weblyzard.com>"]
readme = "README.md"
license = "Proprietary"
packages = [{ include = "weblyzard_api", from = "src/python" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[[tool.poetry.source]]
name = "wlt_nexus"
url = "https://nexus.semanticlab.net/repository/pypi-group/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
future = "^1.0.0"
nose = "^1.3.7"
lxml = "^5.3.2"
redis = "^5.2.1"
requests = "^2.11.1"
python-dotenv = "^1.1.0"
sparqlwrapper = "^2.0.0"
mock = "^5.2.0"
python-dateutil = "^2.9.0"
deprecated = "^1.2.18"
httplib2 = "*"


[tool.coverage.run]
source = ["src/python"]

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

